--- a/kubernetes/apps/security/authelia/app/externalsecret.yaml
+++ b/kubernetes/apps/security/authelia/app/externalsecret.yaml
@@ -27,6 +27,20 @@ spec:
         AUTHELIA_STORAGE_POSTGRES_PASSWORD: "{{ .AUTHELIA_STORAGE_POSTGRES_PASSWORD }}"
         AUTHELIA_STORAGE_POSTGRES_USERNAME: "{{ .AUTHELIA_STORAGE_POSTGRES_USERNAME }}"
         AUTHELIA_NOTIFIER_SMTP_PASSWORD: "{{ .AUTHELIA_NOTIFIER_SMTP_PASSWORD }}"
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_BASE_DN: "{{ .AUTHELIA_AUTHENTICATION_BACKEND_LDAP_BASE_DN }}"
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_DISPLAY_NAME_ATTRIBUTE: "{{ .AUTHELIA_AUTHENTICATION_BACKEND_LDAP_DISPLAY_NAME_ATTRIBUTE }}"
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_GROUPS_FILTER: "{{ .AUTHELIA_AUTHENTICATION_BACKEND_LDAP_GROUPS_FILTER }}"
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_GROUP_NAME_ATTRIBUTE: "{{ .AUTHELIA_AUTHENTICATION_BACKEND_LDAP_GROUP_NAME_ATTRIBUTE }}"
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_MAIL_ATTRIBUTE: "{{ .AUTHELIA_AUTHENTICATION_BACKEND_LDAP_MAIL_ATTRIBUTE }}"
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_URL: "{{ .AUTHELIA_AUTHENTICATION_BACKEND_LDAP_URL }}"
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_USER: "{{ .AUTHELIA_AUTHENTICATION_BACKEND_LDAP_USER }}"
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_USERNAME_ATTRIBUTE: "{{ .AUTHELIA_AUTHENTICATION_BACKEND_LDAP_USERNAME_ATTRIBUTE }}"
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_USERS_FILTER: "{{ .AUTHELIA_AUTHENTICATION_BACKEND_LDAP_USERS_FILTER }}"
+        AUTHELIA_AUTHENTICATION_BACKEND_PASSWORD_RESET_DISABLE: "{{ .AUTHELIA_AUTHENTICATION_BACKEND_PASSWORD_RESET_DISABLE }}"
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_IMPLEMENTATION: "{{ .AUTHELIA_AUTHENTICATION_BACKEND_LDAP_IMPLEMENTATION }}"
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_TLS_SKIP_VERIFY: "{{ .AUTHELIA_AUTHENTICATION_BACKEND_LDAP_TLS_SKIP_VERIFY }}"
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_TLS_MINIMUM_VERSION: "{{ .AUTHELIA_AUTHENTICATION_BACKEND_LDAP_TLS_MINIMUM_VERSION }}"
+
         # OIDC Apps
         GRAFANA_OAUTH_CLIENT_SECRET: "{{ .GRAFANA_OAUTH_CLIENT_SECRET }}"
 #        IMMICH_OAUTH_CLIENT_SECRET: "{{ .IMMICH_OAUTH_CLIENT_SECRET }}"
