--- a/kubernetes/apps/security/authelia/app/helmrelease.yaml
+++ b/kubernetes/apps/security/authelia/app/helmrelease.yaml
@@ -37,7 +37,7 @@ spec:
               imagePullPolicy: IfNotPresent
               env:
                 - name: POSTGRES_HOST
-                  value: postgres-rw.databases.svc.cluster.local
+                  value: postgres-rw.databases.svc
                 - name: POSTGRES_DB
                   value: authelia
                 - name: POSTGRES_SUPER_PASS
