--- a/kubernetes/apps/security/authelia/app/helmrelease.yaml
+++ b/kubernetes/apps/security/authelia/app/helmrelease.yaml
@@ -45,16 +45,9 @@ spec:
                     secretKeyRef:
                       name: postgres-superuser
                       key: password
-                - name: POSTGRES_USER
-                  valueFrom:
-                    secretKeyRef:
-                      name: authelia
-                      key: AUTHELIA_STORAGE_POSTGRES_USERNAME
-                - name: POSTGRES_PASS
-                  valueFrom:
-                    secretKeyRef:
-                      name: authelia
-                      key: AUTHELIA_STORAGE_POSTGRES_PASSWORD
+              envFrom:
+                - secretRef:
+                    name: authelia-secret
         containers:
           main:
             image:
