--- a/kubernetes/apps/security/authelia/app/externalsecret.yaml
+++ b/kubernetes/apps/security/authelia/app/externalsecret.yaml
@@ -33,7 +33,7 @@ spec:
 #        IMMICH_OAUTH_CLIENT_SECRET: "{{ .IMMICH_OAUTH_CLIENT_SECRET }}"
 #        GITEA_OAUTH_CLIENT_SECRET: "{{ .GITEA_OAUTH_CLIENT_SECRET }}"
         # Postgres Init
-        INIT_POSTGRES_DB: *dbname
+        INIT_POSTGRES_DBNAME: *dbname
         INIT_POSTGRES_HOST: *dbhost
         INIT_POSTGRES_PASS: *dbPass
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
