--- a/kubernetes/apps/security/authelia/app/externalsecret.yaml
+++ b/kubernetes/apps/security/authelia/app/externalsecret.yaml
@@ -41,5 +41,5 @@ spec:
   dataFrom:
     - extract:
         key: authelia
-#   - extract:
-#       key: cloudnative-pg-superuser
+    - extract:
+        key: cloudnative-pg-superuser
