--- a/kubernetes/apps/security/authelia/app/externalsecret.yaml
+++ b/kubernetes/apps/security/authelia/app/externalsecret.yaml
@@ -23,7 +23,7 @@ spec:
         AUTHELIA_SESSION_SECRET: "{{ .AUTHELIA_SESSION_SECRET }}"
         AUTHELIA_STORAGE_ENCRYPTION_KEY: "{{ .AUTHELIA_STORAGE_ENCRYPTION_KEY }}"
         AUTHELIA_STORAGE_POSTGRES_DATABASE: &dbname authelia
-        AUTHELIA_STORAGE_POSTGRES_HOST: &dbhost postgres-rw.databases.svc.cluster.local:5432
+        AUTHELIA_STORAGE_POSTGRES_HOST: &dbhost postgres-rw.databases.svc.cluster.local
         AUTHELIA_STORAGE_POSTGRES_PASSWORD: &dbPass "{{ .AUTHELIA_STORAGE_POSTGRES_PASSWORD }}"
         AUTHELIA_STORAGE_POSTGRES_USERNAME: &dbUser "{{ .AUTHELIA_STORAGE_POSTGRES_USERNAME }}"
         AUTHELIA_NOTIFIER_SMTP_PASSWORD: "{{ .AUTHELIA_NOTIFIER_SMTP_PASSWORD }}"
