--- a/kubernetes/apps/security/authelia/app/kustomization.yaml
+++ b/kubernetes/apps/security/authelia/app/kustomization.yaml
@@ -10,8 +10,8 @@ commonLabels:
   app.kubernetes.io/name: authelia
   app.kubernetes.io/instance: authelia
 patchesStrategicMerge:
-#  - patches/env.yaml
-# - patches/postgres.yaml
+  - patches/env.yaml
+  - patches/postgres.yaml
 configMapGenerator:
   - name: authelia
     files:
