--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -4,61 +4,61 @@ metadata:
     name: cluster-secrets-user
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:nxwMLGMZeyBygXU=,iv:DmkYgkV4QPRGwtAchnr0ZUFnHSFDbdBj955azWOouHs=,tag:63o+B7oPW/DqwADIqiEpUw==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:lR2Y4adrU9BfqG7O54HhIQ==,iv:RV6sRxHsGqaLumz4iiynwxgh76mq5jV40u4o7KY+vKU=,tag:8XkT9+yrnFYxWZdlhKAO1w==,type:str]
-    SECRET_DOMAIN_LOCAL: ENC[AES256_GCM,data:ZMczgL7fwHskkspU,iv:RPi8UcCSnjrY+1TmMNLFThBIsXjibw+Tzk5xDv7fGEA=,tag:cWwJS6OJfVXs7QJdhTXjQA==,type:str]
-    SECRET_DOMAIN_CC: ENC[AES256_GCM,data:Ly2oZpTjo+KxCA==,iv:iMQU0G+H+QlY33DrWmQquwmYDA4sMaRTyEn1cd7p/m0=,tag:ERd/WDGlY51d6Q5zBapnRA==,type:str]
-    SECRET_DOMAIN_CO: ENC[AES256_GCM,data:0lqWcKG+RQAd6w==,iv:h6LniFK6ipDi9ZdQkjgAf/v8n/0JnqB5FBPtMcXMffY=,tag:91dVkHeRrBYMXt2KiIMovQ==,type:str]
-    SECRET_DOMAIN_TV: ENC[AES256_GCM,data:NdAUTHLgoYoPHQ==,iv:2oTH3TFmePnRul4/fHprWd9GQ3iCfNdbHWBgsVczLkw=,tag:tum8KPjFwnW9BNWOsooRWA==,type:str]
-    AUTHELIA_SENDER: ENC[AES256_GCM,data:H9lPtdZZQFzH/RQJNriVsEGzm47/fyA7Jaht,iv:5Mr4hkdskQ00ftI7uTLjXwrAqqo42AhyWquV8YBcOJk=,tag:P9Hb8gSEhI3kJCteYuk3Mw==,type:str]
-    SMTP_USER: ENC[AES256_GCM,data:xyGqRi12qDl18oloWw2M3A==,iv:E0E4vAvjZils6zmk1f23H9aZlEoLQcnjhmjdhDXF5Tc=,tag:+uQBhybxWSoj9BUAqV3hyQ==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:SQzu2EfUpFbTaJA=,iv:/TmDW35u4xYHNq2Syq/EFyvWlR0D3u3DpOCNhNTBXhk=,tag:7xAEBHXfgaadIKIhLV6Zaw==,type:str]
-    NFS_DOWNLOAD: ENC[AES256_GCM,data:slqZJQD0CxliIe2Nrm4A3Pk=,iv:UpRgGL6J07Z43xubVt7Zc0LSm5zgk9q/zTJbvnWSFEU=,tag:wduhjziB0jr5li9KMxHTZw==,type:str]
-    NFS_MUSIC: ENC[AES256_GCM,data:5joNeambbwWcJpvEheI=,iv:T0GVjUXtsBB2sqXiXPIozd/GkR9YclBC/vE1qZ6tMjc=,tag:dN3BaNu397rtylTZg1tlBQ==,type:str]
-    NFS_MEDIA: ENC[AES256_GCM,data:XMPrPbHFn5U2D3ZLpNo=,iv:g7h4Or54mICtm4nnxzKx6kI716pTR7VPQZJA5K5rzeo=,tag:m6uPCZUKASJFBx62dUQ6VA==,type:str]
-    NFS_BOOKS: ENC[AES256_GCM,data:PStM27L76FoBNvrkeZ4=,iv:N3uXgtcFMTF+2kJqRKtevUng3cNDh6iLBMCPVFMJr78=,tag:PPPwk87Z51QuCKC1MLyisg==,type:str]
-    NFS_KUBERNETES: ENC[AES256_GCM,data:lxmkuTe/PHuUMiBLhEJ9vOES6g==,iv:NBdCQe+pVSgOvubXUopb9hegIX+NPiGGf+gZeRIIocE=,tag:QRHHTTJCRuvB7KY+Er8sCQ==,type:str]
-    NFS_CSI_VOL: ENC[AES256_GCM,data:edPGQrMt7Cd3kggFd/jWUOf3wQ==,iv:oWHyDqLIjZCLHnY+lHFfPcsf9sTho9VvwBJJVuTgmPU=,tag:GfaEN3mwC5Bu6imT3d8G+Q==,type:str]
-    NFS_SUBDIR_VOL: ENC[AES256_GCM,data:dh69KDN+C8TWrtvqDvvsNwEhs4w2kKM=,iv:ROUJL4qjGl3f5fObC4Hq2H2DsS1ixYPDvz4JCbobLak=,tag:DAD7k27h/xKBVSL9Vy6D0w==,type:str]
-    EMAIL: ENC[AES256_GCM,data:aZaEf+MyHgU3R4+evmyECg==,iv:81vBsg+kcVwwfJsMag/A9U5GJFao0TNCHoxqrdq1fSk=,tag:NKxtkMKHibJyJoEUCiFfnQ==,type:str]
-    LONGHORN_BACKUP: ENC[AES256_GCM,data:aN0fxXCEHWPYmkps+FL8Am2+SCSDYP5B81kqOqUNQTZoVD0=,iv:q21m50iTL53bv3FCCmgN3QlNH1b4WMSXM9pDsqpJCgE=,tag:109h5qHsEl9Y3ilDvWo3lw==,type:str]
-    NETWORK_K8S_CLUSTER_CIDR: ENC[AES256_GCM,data:N9igeDsI0ncI920C,iv:re0HqoazPEgpnEJ2igKxPEM+rzb1GM49PVRLB8vrIwU=,tag:5tOeWc8fdlgQputOKtJtyQ==,type:str]
-    NETWORK_K8S_SERVICE_CIDR: ENC[AES256_GCM,data:/nFxHvt09MwB+vb/,iv:laGVelMxpo+ss2hG7PguQC3kwdlk8oKcf2Ubta+Rh+E=,tag:RuuGWrd5DIPY0vw56o6p1w==,type:str]
-    SECRET_WIREGUARD_PORT: ENC[AES256_GCM,data:8/nJbgg=,iv:tGnWazlyvaueVAFnoDc3/8HWMeFm5gEx9D54AGF14Js=,tag:VJ9JVxO96hZSq0F5BQSLgA==,type:str]
-    NETWORK_SERVER_CIDR: ENC[AES256_GCM,data:RlMv5A2FjxrF5g==,iv:GqrrXeef4gaigjzVw6/uugaVJsLmIB3rv0oMAWvGMzo=,tag:+Td6+RxV/iD7FepVd9q2SQ==,type:str]
-    WORKSTATION_CIDR: ENC[AES256_GCM,data:HGjQLASeT9HTnplF9Bk=,iv:XeV5e9/WkCI93YWDnmZ5v3YQPIz3jpZEmuQ38nHaKdM=,tag:JN0i7ivsrL9PisDyRy3zGA==,type:str]
-    SECRET_PASSWORD: ENC[AES256_GCM,data:8+GlSRq/BZ8=,iv:g49zYf75ZAd4XRXhQcVO0WdkxBHrYoLbKcLv8HczXy0=,tag:Ghimww1nhNaBu1GltzEbcA==,type:str]
-    SECRET_QB_USERNAME: ENC[AES256_GCM,data:D/MIqc8=,iv:QWyOj1DxovEqKBYRabFH2KuN+ABR+Bs7Y8tePJbqMbc=,tag:W1+kc9DioKzZOhkPs3tB5w==,type:str]
-    SECRET_QB_PASSWORD: ENC[AES256_GCM,data:xyfA275UK6k=,iv:cq3IPYhilsu5h/4XW8kudz6S3dL3Y8R8048PRoY6XlM=,tag:lhdoOR26qTtSjg+pHj1Okg==,type:str]
-    NFS_MINIO: ENC[AES256_GCM,data:+eXyQwjX+PZXaYaWW5k=,iv:40A009d62W2T0/qgX6qgUJsebpE2PFvuE14LydPigYs=,tag:IB2630HSorZH2KbyHXoLpQ==,type:str]
-    SECRET_MARIADB_ROOT_PASSWORD: ENC[AES256_GCM,data:ufU2//a9D+w=,iv:28zxOXpT8Pyz1JxBuAK5cE9wJhodrPl5w2uod7oUnSo=,tag:qoC3DQGcBwqRktbBSs5a8Q==,type:str]
-    SECRET_POSTGRESQL_ROOT_PASSWORD: ENC[AES256_GCM,data:YGRsLxK0BAQ=,iv:BbNjFm4zPV65XBa8K5+Mb+D5/1y+XdTMiqJhNFJU2QI=,tag:QmMznF5F4Vd1AkMFWDyPhA==,type:str]
-    SECRET_KOPIA_PASSWORD: ENC[AES256_GCM,data:dvyPsBib0Bs=,iv:lWAKXcmMsDbdfYUoLrKaz1gJP/x9bJQgGm8HN8t3sgI=,tag:E3L6ZotbhQYPgDBY7S06dg==,type:str]
-    SECRET_GRAFANA_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:xlDr5IEsdHsBsAqbZOmObmLwV9TePoDBL50=,iv:SBccKp87Joa/mmyzkECIgBzjWqpCbqCVfR/JlGoILH0=,tag:9Hj0bStVeqlwPaL3K43qWA==,type:str]
-    TZ: ENC[AES256_GCM,data:3faQ8dOSBEGbR1cTOSkrh3Q+WWI=,iv:kM4mT8JEg75+nOJra8W+4rno/B1rAtGodlZ9UnNesas=,tag:hAQts6YRkM7WRpU+qDE12Q==,type:str]
-    HARDWARE_DOMAIN: ENC[AES256_GCM,data:khvOzqbAAgA0JA==,iv:wV39yIYtmkY8IFs4/MONIO34dx6B9DvM+v7ZgkMNoNk=,tag:0X+LUdQs6S/aAB2XSM8zPg==,type:str]
-    CLUSTER_NAME: ENC[AES256_GCM,data:4f5GSTKp1A==,iv:TBpyrd3ddNn7cXxy0FEgrlBC4GaS+FWMLTVCC1e4aEY=,tag:4EdN7fLyUJR6olklb7ql8w==,type:str]
-    VNC_USER: ENC[AES256_GCM,data:znBQgZI=,iv:7FHm6H8DdowKgNHUfmHQZ1tp9e+UyCerrYnwFXfCQ/Q=,tag:tfJFvJedat8ne9kFGGs9CQ==,type:str]
-    VNC_PASSWORD: ENC[AES256_GCM,data:jlI/dn0fW9E=,iv:+r2BtnbD4LzBM9dzXl6SnAyUf5nmUGtrSpR5MipXJBM=,tag:ffDYjsOPvA7WjlUDRUZuug==,type:str]
-    SECRET_BOOKSTACK_DATABASE_PASSWORD: ENC[AES256_GCM,data:dSbk8Ea4mNM=,iv:sCBVXiZqOyYEb7wHuL0dmMF693da6rLd+0Rp+VSTURc=,tag:+gQIYjZPm8vQDepZn8cQsg==,type:str]
-    SECRET_RANCHER_ADMIN_PASSWORD: ENC[AES256_GCM,data:XNDmepZeod0=,iv:Oc019mMbTlk8zpz8M9IokhASLHRGrGLaljqlFmzHcyU=,tag:6qY8p/5sFz2V6LFNARu3hw==,type:str]
-    INFLUXDB_ADMIN_USER: ENC[AES256_GCM,data:F+DAZmI=,iv:BH4kZdZoP8f4HA8JCDmIgPyQ4zy7+/GPDndam7weAqA=,tag:uhpBqpjuRKgnGkiUNLv9BA==,type:str]
-    INFLUXDB_ADMIN_USER_PASSWORD: ENC[AES256_GCM,data:IRWcxRkM+Ik=,iv:nMpzo7daFulKua+kwA14AZ3djrVmDHc7F+J/vTnyUPY=,tag:jsi/PAMj+N1TbO5z/yh77Q==,type:str]
-    INFLUXDB_ADMIN_USER_TOKEN: ENC[AES256_GCM,data:5tYhu5bFD0oo3Q==,iv:nQuzsTeGSoXXrEZ+v50ZzQMJ52PmoSrBWeWHEhNSWBQ=,tag:Zhsjb/HR8mQaDkubMsX/Yw==,type:str]
-    PGADMIN_EMAIL: ENC[AES256_GCM,data:wQAUo8EHbG02YjW5c2lOFQ==,iv:Vhv0tsbRiE1IUKOlzyaXPYdDtUBqXzvrXNoteCFFjjQ=,tag:4E9k1gtBAViKygSfGZ4ktg==,type:str]
-    PGADMIN_PASSWORD: ENC[AES256_GCM,data:vN44x3jWYAM=,iv:d19R/3HpcYzMxCL6iZlXrUscRbKeMLHQOa8aRd56ueM=,tag:KyaRBMjpTGxZtdWvNFI9jw==,type:str]
-    AUTHELIA_SMTP_PASS: ENC[AES256_GCM,data:Qn+T9PzYOLmiCJyl9fOTIA==,iv:rfTG5Attmtc+rtamVoFBMe1b5zPfssQ5llxLUPFb0Ms=,tag:yEY/V5mJjatVlyIzspmLRg==,type:str]
-    SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:7n/az0VHNTG2p5A=,iv:DCrWeavmCqVtlX1Ik6wZl9lmeDy6hqrExF3+r2PgVLs=,tag:UHwzrOCwcR2hMj8JyEofaw==,type:str]
-    SECRET_OUTLINE_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:c3WbtqqyFxi928g1aDuS83tvOq0gFhaSUHo=,iv:fn/mveaRGaerpMEcX6FcAvXORf3WeEi0UOte4zVqNno=,tag:fKtSkMBkeoq5kG/a6uSgQQ==,type:str]
-    OUTLINE_POSTGRES_PASS: ENC[AES256_GCM,data:qb68iOj7DsKUlR8nQFxfFEoX41aL7jh0GnM=,iv:uIF5gDRW/JMZx+aVok/t3d/OBoDbbDVo4IZxZLR6eXw=,tag:5hvSF2NvP+T92vWlXRhKIg==,type:str]
-    OUTLINE_POSTGRES_USER: ENC[AES256_GCM,data:qNfyCAkgLw==,iv:5MoaAACzXhiAi4gJUL8gSOt9pdOEKJSzftDq8ezJdv8=,tag:5ZHROXu5Mua6Te02+hH6iQ==,type:str]
-    SECRET_GITEA_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:ChncZEpxMUS+cTKEgiwlH/oRNzZvYcMeqag=,iv:kGChcJL41opcTwR0XuDnsEboR5qe2XSkB8XlQTzyatk=,tag:YzosRRsU+FwZNp/yI/q3FQ==,type:str]
-    SABNZBD_API: ENC[AES256_GCM,data:2CPzoc4PW6czS7S2GsiB/z1Np2TV2zjJA9uwsyS13yk=,iv:OZJBv0NoQQtDokHY2lXltFHU5QX2dYWu7vksGjzXS+A=,tag:Cir37s1eTQehako1lep1uw==,type:str]
-    SYNO_ADMIN: ENC[AES256_GCM,data:lSHWN5PX6z0=,iv:fl1IVTYKnz9G46AgTJ8GMxD90/opE48GIQQlQWwwU0w=,tag:f/N/Bx5GIoa3pUCH+xV3Zw==,type:str]
-    SYNO_PASSWORD: ENC[AES256_GCM,data:NixxThgjWhw=,iv:sl6f9mONnl7LMhup2wEuN4TSilj1W5q/CHG3Mth5Yl8=,tag:eoikv5vEAYIo2Y8uo64Rlg==,type:str]
-    NAS_SERVER: ENC[AES256_GCM,data:eXX0zpPEyPsJX6g=,iv:9xltdvYeAkhHe+s8pFE+I6k3zFCudElJrh09fLBE+7w=,tag:DX9t/nPRD2MM05iQQC2Ozg==,type:str]
-    QNAP: ENC[AES256_GCM,data:WfbCO6xKFQPXX1E=,iv:6nkB0bG1myMK1kuhXUWAsuVltUIUYi7UbCznagrJOzE=,tag:uDOiOwmFuTqf2AaFTdx2Jg==,type:str]
-    CUSTOM_WEB_PORT: ENC[AES256_GCM,data:DLo1GQ==,iv:VsOnWZb/7K8JL0VAdBfkRc46LfGpwl8lRXype14vA0w=,tag:bap8z4B4bZKLk15iYN9GbA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:Ht6HiQR5yfyiS08=,iv:74ChXvoujHvAh/dWms2WXyGcKod5QZ5XU7536hEsqKI=,tag:32qodWVy9JO1Kaxwt2MmJQ==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:rBi85xF8WE+xhipzCqCdIA==,iv:jDzSosdUEe9BLHy05yKol6zzozd6spUb3QY04YWKPzc=,tag:LA6qkhs7ygxOvhY/gKEwlg==,type:str]
+    SECRET_DOMAIN_LOCAL: ENC[AES256_GCM,data:c1JfecXTzo6SBcs5,iv:JNgmwic/I7KuZ1LF0Ab/GQgsmetba5HaJRlbyjUEmmE=,tag:IXApHtHrCp9j0NzKSGDBRg==,type:str]
+    SECRET_DOMAIN_CC: ENC[AES256_GCM,data:6kLn2FKmWYFH4w==,iv:u3jfV0wN1RwTQ3hmOeZUHiKVociAg/rNWJf2lv2qldE=,tag:Unm1XMPZqelu1exOGaZ6OQ==,type:str]
+    SECRET_DOMAIN_CO: ENC[AES256_GCM,data:pHCPORfywyrYJg==,iv:hyRPx9kyZ22QwtV74w+goG6oJqqG/5OpKrCzRU+o/+k=,tag:c1XohkkfNBOqPKcLILH/fQ==,type:str]
+    SECRET_DOMAIN_TV: ENC[AES256_GCM,data:yKiGJIVMUMRk1g==,iv:yuvJ6D5NRX9qwnKnMef5O42B6ez95bpLXUC78RymIv0=,tag:D7G+dIYPlp/gKAQZjX7YiQ==,type:str]
+    AUTHELIA_SENDER: ENC[AES256_GCM,data:kcWlXATYAhpiKRNRcZ3i/L39PqBvoGUO4vV0,iv:sxsymQ8m1WSD0/jldp3oUMuWI+rskq3t3g97FCOpO9k=,tag:1vPzKUfhWpyCrNAvECIUDg==,type:str]
+    SMTP_USER: ENC[AES256_GCM,data:PuBOJj5jpGjKW+pgWJNYSg==,iv:wB8Q9/4RDDJpftxA4HvBWEnMpQFWWW1I3BRxFtKpcxE=,tag:oJxr4RedCCwi3PmW9eY4vg==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:k84XNLXFrfre5Aw=,iv:ssxX/ZigwF9fbwD9HGcSGDGqRwErzjVZXzZjwk5ao0A=,tag:bzdlRH5J/0Zwyd8gPR8H1A==,type:str]
+    NFS_DOWNLOAD: ENC[AES256_GCM,data:iUmB/SQ2zHiSuaI2QKjQKw4=,iv:1WqGcQ8yfAbrLLumEvfiG3R/dpscV3/EBtPhuvfU5Do=,tag:2kbt+ao/z5fR2YPXM/sDyA==,type:str]
+    NFS_MUSIC: ENC[AES256_GCM,data:6+nCPwrLGZtElgeDke0=,iv:4miUcmAEsQ1HMmfsUhgSczEI99mdxi8sg69oQC9gh/M=,tag:LiTP2jf8OwtpLc7UqdWJ1Q==,type:str]
+    NFS_MEDIA: ENC[AES256_GCM,data:800GfKP0aUeTGTI2l4g=,iv:KboCYhuR9R3SdHKu0nrCKe1vRBfDD58TZc/BfKwQiOw=,tag:1sW5R3ygadVuVW0mddid3w==,type:str]
+    NFS_BOOKS: ENC[AES256_GCM,data:Q1PIZey24TR9ygA6JTQ=,iv:yrBpnrPoeZFx7OjKuWT9lKJ04Xz7Q/y+WF0A+fWkIYA=,tag:lG2vFBkB1VYyBPDkZ223bA==,type:str]
+    NFS_KUBERNETES: ENC[AES256_GCM,data:Os06ifOxlp90IlZqFiIDW6fCcg==,iv:Hosvm5QFGA5X75gKvFANYjx22cEpPIm+kLNCDKiUgzI=,tag:StqQylwET3bp1A0HTekreQ==,type:str]
+    NFS_CSI_VOL: ENC[AES256_GCM,data:5UyS0zgUkdtPRp6CYeHwZ/fwiA==,iv:HQvJZ4x82BQeTSegknTztvtINoCp28P8meqSm0ieJMk=,tag:gFvrfFlTQKovL68Ja3CBLg==,type:str]
+    NFS_SUBDIR_VOL: ENC[AES256_GCM,data:EaYNGpF0OhzDn65VHHEmzDOG1Zcap40=,iv:MjlLB3UymHIgtEcKYdaLxefBoc7FwFS+fJIulwxPsHw=,tag:TQb9sgtT3iLS6o1T8ledoQ==,type:str]
+    EMAIL: ENC[AES256_GCM,data:LunvyA3hu36e/I0mlWohGw==,iv:vOzdo61pCe3ZlwAphqWBYvk7TT/JRNJ8AHqsnjU95fc=,tag:t17LHKVz6dXK0zCLLawgIA==,type:str]
+    LONGHORN_BACKUP: ENC[AES256_GCM,data:gJzRZIlgsTJW5lng4YhhJbhgFsOO/l/1ds6FUqtQwRcT47c=,iv:kwBpP6sMutcE4SqGEsdbXU549Gfd7bkCTggggODYvQ8=,tag:QM0jxw1jmfR5MmOK7QMOiw==,type:str]
+    NETWORK_K8S_CLUSTER_CIDR: ENC[AES256_GCM,data:0+TTCNCSHp7Qux9D,iv:2G2ALorGQIJGcxSlh5HmYXGF24ajAREl2n5pDmvuQ5o=,tag:ZltKT9WRwBA37oOcSca4tw==,type:str]
+    NETWORK_K8S_SERVICE_CIDR: ENC[AES256_GCM,data:1luVbtExzZAMA1cX,iv:awAH5ygLaEWYohdartaUzyphikyLkL5t39lQKGi+jiM=,tag:JYH+hhRDmTefTKEO7Rp1hA==,type:str]
+    SECRET_WIREGUARD_PORT: ENC[AES256_GCM,data:9U9WKr4=,iv:9EExWGDf2CUDIlD5Y2uRo+XY17/MfwSxpScoI6gHd0k=,tag:hxAWmY6rtaZ3kbVEXsCyTg==,type:str]
+    NETWORK_SERVER_CIDR: ENC[AES256_GCM,data:aX7AaoYEaDO40Q==,iv:hDrzS8jDN6sPNLx7i7VShA3itprIpa7VF+BEZhOe21U=,tag:+9ywVI4b682ib1LhMDZetA==,type:str]
+    WORKSTATION_CIDR: ENC[AES256_GCM,data:N4PfKYuS/ZCHlbgcDQQ=,iv:IrZNCc6cwcrk4h9MK6QFvCJ1ou1jCU/+NnAkEgTJTfk=,tag:wrX3gG+lSN80eJ1KrU2K5w==,type:str]
+    SECRET_PASSWORD: ENC[AES256_GCM,data:bQTdidAvKig=,iv:6HBjMOyeZ9uFZ16mH6sfgZejKgo3IE2FS+C+uDuFhAI=,tag:EBvk+e7kcmPLuqvMbRfGyA==,type:str]
+    SECRET_QB_USERNAME: ENC[AES256_GCM,data:H5Qz6Gc=,iv:bb1JhGFdib2J6jAjHy4JcOvu0zipvEInH6tCnYA/ccc=,tag:S29SbtRz6C3LCHXCVyrK+Q==,type:str]
+    SECRET_QB_PASSWORD: ENC[AES256_GCM,data:uyhNuLYhoos=,iv:A4g8GGIVEPalYDIzwpBZVik85fqhp3Wl0q3pMrLEpNA=,tag:A320893zLDfrlQSSlz7J7g==,type:str]
+    NFS_MINIO: ENC[AES256_GCM,data:kkrKi4DOCa3w0cpjbKA=,iv:5Mlnc9zLYYOTSzHRtalpQe1L0LEINkvXAlvQWIMIu70=,tag:L1x00ZR7AHtkCdxRpXOCcw==,type:str]
+    SECRET_MARIADB_ROOT_PASSWORD: ENC[AES256_GCM,data:TVQJFq9KzZY=,iv:umbM23cCaQnE4U/vZZgMTKurzSOEvucho1QbG5I35eo=,tag:26/5Xf1s8NCxE09NTvfk3Q==,type:str]
+    SECRET_POSTGRESQL_ROOT_PASSWORD: ENC[AES256_GCM,data:j3g1+QsLsvw=,iv:lQCjeRMpG2qJHj7lD3tvXzpgM7dPM3OiTNU9f925E48=,tag:wHOgJzsSfWp/72opLomM9g==,type:str]
+    SECRET_KOPIA_PASSWORD: ENC[AES256_GCM,data:lDtB4vbSGbM=,iv:MB1NPSZ/tsFahwGU/MJFUNiTFCDNczUUUKW4wVRO72M=,tag:vib9M1WwheX3OWRajqnT3Q==,type:str]
+    SECRET_GRAFANA_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:I76USamIyxU5/27DISjSq61PecGNmxdFqhM=,iv:mYGgp9LU+Uf9YEUDW+lWzF2Q5xXf+fWauWXoigsmytI=,tag:I16fHDkyxeq5pa/7V5v9IQ==,type:str]
+    TZ: ENC[AES256_GCM,data:ncvfXe7y31vtRFqoiNKcVH8tUZY=,iv:NzQo1D6OeZgCIqh6SIRFhMkjpANa4KCPn49TtGFupV0=,tag:HlYgWtVo5HSM8RBNJrdPDg==,type:str]
+    HARDWARE_DOMAIN: ENC[AES256_GCM,data:t7iPt2LogDlbRA==,iv:2GGjVTgiAlFQ2poq2os70BQy9ygEUfQ0rP6ZoFEOr+g=,tag:OiwJJOSgbHmfmswt1YMb0A==,type:str]
+    CLUSTER_NAME: ENC[AES256_GCM,data:b/XROCHklA==,iv:A5gSxcLgFFUvIAhqRe9wOOwxECgbdG4cZsjvFJ83NzQ=,tag:qWfiPK/KcetYS2V2V5nwLA==,type:str]
+    VNC_USER: ENC[AES256_GCM,data:j3Nkigo=,iv:ajeOqHNznb9feT+QeZkqf+MQPDaviIUpJkwLg/SMNLk=,tag:VVANVKm3+sC09aRzr4ESnw==,type:str]
+    VNC_PASSWORD: ENC[AES256_GCM,data:9tufpn58T+Y=,iv:C8KwhB/awajq/XR3JqK7zXdnrtxKbGXz25OnhZtW9hY=,tag:yzNwJlWaj0Jv5YF4++ElbA==,type:str]
+    SECRET_BOOKSTACK_DATABASE_PASSWORD: ENC[AES256_GCM,data:h273JO66yt4=,iv:YNgpkIbcHfaqM2sAh2qGoP9z1yGNiU39zbNbYSpwMeo=,tag:1cNkEWLtvsobKKDsF96lVg==,type:str]
+    SECRET_RANCHER_ADMIN_PASSWORD: ENC[AES256_GCM,data:bniPbJMH1fQ=,iv:6UVJGWwD4d8OUgf5WcQ9UnA5IRyS9OiQb1t9r6WrQYc=,tag:dOWzTMFBgRUTX4yBPnPyPQ==,type:str]
+    INFLUXDB_ADMIN_USER: ENC[AES256_GCM,data:LbVsxWE=,iv:NidIPBh3saLLw/3mdJ7x8w30G/6Hnpw1knFRy2vCZ4c=,tag:JNn2T5JSZAaoK82yO7XWtA==,type:str]
+    INFLUXDB_ADMIN_USER_PASSWORD: ENC[AES256_GCM,data:8Lrz/aAgjZw=,iv:lbHnfmaiOCD4fy2e9nnYI8iQQouNR8kVR+h5Ey+IAK4=,tag:jq/HIVrj1ULnf1TfyFzXZQ==,type:str]
+    INFLUXDB_ADMIN_USER_TOKEN: ENC[AES256_GCM,data:8stKFI4DSlGlmg==,iv:8Yj18IaW5B84vy02yiWCYzUZsSI4A1RY6kYwQjqCh7A=,tag:A3G5o6NicWcgJmrozK+SKQ==,type:str]
+    PGADMIN_EMAIL: ENC[AES256_GCM,data:y6Y0g+GBiQ3LrcsMhyPg3w==,iv:ImLqk7X5UtHBguNykUzW/RXs2t0C3YiGRDMNQsBJL4I=,tag:8ETtu+FETlCG8ZoaR9XYNQ==,type:str]
+    PGADMIN_PASSWORD: ENC[AES256_GCM,data:zA7/MVDLFUA=,iv:BOhzSn7X9E4viai0BmWjKSBmD6+tN3woDJM79DAVXNo=,tag:GVnGMoFv8P6eARKcqHdBLw==,type:str]
+    AUTHELIA_SMTP_PASS: ENC[AES256_GCM,data:ed9DUONB9G8WmiSs0YqxpA==,iv:33rMIT6xuJ77OlEAJmqJPr//Ui21atV51MnsHlqk298=,tag:voohfQC7cnyIH10bvA/Wcw==,type:str]
+    SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:LLKOZTigYVhTca8=,iv:WBxWaw7p0rNZREYmFl23R+5SVSimAyPRGXzP7avVKRI=,tag:LIj6KMQMf05i5rcOB3PM+Q==,type:str]
+    SECRET_OUTLINE_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:Pt54cXKH1NvjirAJxxYiqv4zb+SbwPHjOOM=,iv:Vy30vzfKyAbPLT39kRzjU+v11mBOV1eynFBmwfx8XUQ=,tag:kst2zwOeTlrxwTfPkTPAaA==,type:str]
+    OUTLINE_POSTGRES_PASS: ENC[AES256_GCM,data:JaGExAZ9yXQrbi0zohaHiZsOroCTNMLzgJI=,iv:WYarklhtAQ/lYHhWrZYRpxXRgndsERz/GMXfpUQxU/4=,tag:5G/V+cq5xtWQwZIdbGsAvQ==,type:str]
+    OUTLINE_POSTGRES_USER: ENC[AES256_GCM,data:f5o7E+c6oA==,iv:GRdgBonA8QLcpLP38l+XAE8XS6PNKvtjDdXdIuitUFM=,tag:DfngzShnAvVRLprP9uCPzA==,type:str]
+    SECRET_GITEA_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:T+0A30c/plaUsiaRHuFYEVqkH1EPMoDYttA=,iv:wCeFJ1XpifX86+43KvZqPoo9F0PQpZ9Ngs2OvIg50j0=,tag:OwhaqKuICK8DYdBSEjT0eA==,type:str]
+    SABNZBD_API: ENC[AES256_GCM,data:Ld/98B/H6C7xYnFTtLOwKrvUoG6CnVehIM9tj7qy4mQ=,iv:z9DhxZGweOXNAgj6SgrtK9IJEJORwfmRZ5bs7CmJdow=,tag:VHQZ/KbTfRJuBbom0Y17Og==,type:str]
+    SYNO_ADMIN: ENC[AES256_GCM,data:WIQw8lsmoOc=,iv:IL4ZxH1C+4yeqUINpUcLdNzukkaTzuwZcl1Bot0Jwa8=,tag:eWgFyF+REyOL2foiL6uT2g==,type:str]
+    SYNO_PASSWORD: ENC[AES256_GCM,data:LgBRcWc6FKw=,iv:LPd57N2z2L2E+vdTVma1ouqLg5GmJbDOFZHAquCrKk4=,tag:cxsoZDYwjo1Hp1zfoZQIXQ==,type:str]
+    NAS_SERVER: ENC[AES256_GCM,data:CoUMG8jy7ajE6jA=,iv:7JDE9YomwwiAnypDjBp8zglX/iwm1L7Ir7KPk8UdSZU=,tag:f7SC2KVDrRNKxa45mE64XA==,type:str]
+    QNAP: ENC[AES256_GCM,data:spfwjGkjYngWHLU=,iv:Kn2swSUWL/OxkBDKpvwXcxQs+l2sqQNWrKLBdtDBthI=,tag:FbilX6TGDqQGgMgc4MUT/g==,type:str]
+    CUSTOM_WEB_PORT: ENC[AES256_GCM,data:8tZEtQ==,iv:nxNtrGShZQDOeeqpX5cjXraopjPzyzLn8si4S65dZu0=,tag:m0Q+po7ztqB567d8xlNMzw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -68,14 +68,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZUXl6SVp2bnhDdlpMU2Fn
-            SUNLWS9LVjA3dStEWHlFRWdPR2o2UFZuQzJJCnRvUEprOElmL3V0KzVLcFZsWGpV
-            OW5SK3RNUEVqdkNjY2JDTDUzUEUzMXcKLS0tIC9yYWxQYmZvaHpoUUMzb25lWllt
-            cytUNWhnUGJQMnZHZVVjRmRnVEg5SWsKbphfohVs1rc7roic91e4vbhaHRJapbFX
-            gHLjzEjbP2+pMxUr6E0C2jvL/bikwL9oeTIM6Jwps487gt1h5/o3sg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCa3pPTm9KMVlCNmcxN2NN
+            ejZzMkJBZU5XKytxVzZQS2crRzdCUVVnMjBZCm9PZG5YeGUwNHdMMCtCSjZJTWNP
+            YkMvTFJVM2dwaWVXeTVrdUJUN1l3cTQKLS0tIDZpNHFMMVRsMU14OWpkZDM3NHpr
+            MEJBSno0eHhBdXhyb3h6a0xOS2gyd3MKimpGRHS/HHlkMUiCzacXzULcZA3CRp0z
+            gneT7iZAEbsa8s3ZeRsNO3Pb3JC8zYbzkvODK86vz48XqcJPrYelFA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-10T03:01:43Z"
-    mac: ENC[AES256_GCM,data:mDUsQo8tb/fN6rup9xq0BgD1Nv1iXk6pK+4yjy6yj/BaAyzIGU4P4Uy8Do7cQDDsicXGbltiF1bd6nN8U5youHByJXHW2clL4J+CYOX6qo6aTV42Wu0fFDiXW/akKkXbNHSp//n520zHFgZ8fkBnvjF78P4t4GC//Xj1DzKtjcE=,iv:hBnsc8ofhIyDjjlfR6/QoOyqF90v0ebC/Wupa0a+zys=,tag:dWo2j5UAoospciB81jsncg==,type:str]
+    lastmodified: "2023-10-16T02:37:06Z"
+    mac: ENC[AES256_GCM,data:wog1nG9adIQmuo4QaTzjjame77kjMZA7W+9TN/hXOY9rY4eAa123HjOkqMRJL6L0zSlfMJY7/FL2fl7ix5pccgI3AHDrJTyRdJoitQorwQW6h3sIScrToO9RF5s7I5DxzPNghCk49KOmpwxw1ThrXbdmZ9rrIbIAOKvZUghl2vc=,iv:/FtEQYfgbT6kwkMO9GTK5hHVa44VMAas+OFYfT7sx5g=,tag:2nOTq04VpVzenAWTVSKjEA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
