--- a/kubernetes/apps/security/authelia/app/externalsecret.yaml
+++ b/kubernetes/apps/security/authelia/app/externalsecret.yaml
@@ -24,21 +24,19 @@ spec:
         AUTHELIA_STORAGE_ENCRYPTION_KEY: "{{ .AUTHELIA_STORAGE_ENCRYPTION_KEY }}"
         AUTHELIA_STORAGE_POSTGRES_DATABASE: &dbname authelia
         AUTHELIA_STORAGE_POSTGRES_HOST: &dbhost postgres-rw.databases.svc.cluster.local
-        AUTHELIA_STORAGE_POSTGRES_PASSWORD: &dbPass "{{ .AUTHELIA_STORAGE_POSTGRES_PASSWORD }}"
-        AUTHELIA_STORAGE_POSTGRES_USERNAME: &dbUser "{{ .AUTHELIA_STORAGE_POSTGRES_USERNAME }}"
+        AUTHELIA_STORAGE_POSTGRES_PASSWORD: "{{ .AUTHELIA_STORAGE_POSTGRES_PASSWORD }}"
+        AUTHELIA_STORAGE_POSTGRES_USERNAME: "{{ .AUTHELIA_STORAGE_POSTGRES_USERNAME }}"
         AUTHELIA_NOTIFIER_SMTP_PASSWORD: "{{ .AUTHELIA_NOTIFIER_SMTP_PASSWORD }}"
-
         # OIDC Apps
-#       GRAFANA_OAUTH_CLIENT_SECRET: "{{ .GRAFANA_OAUTH_CLIENT_SECRET }}"
+        GRAFANA_OAUTH_CLIENT_SECRET: "{{ .GRAFANA_OAUTH_CLIENT_SECRET }}"
 #        IMMICH_OAUTH_CLIENT_SECRET: "{{ .IMMICH_OAUTH_CLIENT_SECRET }}"
 #        GITEA_OAUTH_CLIENT_SECRET: "{{ .GITEA_OAUTH_CLIENT_SECRET }}"
         # Postgres Init
-        INIT_POSTGRES_DBNAME: *dbname
-        INIT_POSTGRES_HOST: *dbhost
-        INIT_POSTGRES_PASS: *dbPass
-        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
-        INIT_POSTGRES_USER: *dbUser
-        INIT_POSTGRES_SUPER_USER: "{{ .POSTGRES_SUPER_USER }}"
+        POSTGRES_DB: *dbname
+        POSTGRES_HOST: *dbhost
+        POSTGRES_PASS: "{{ .AUTHELIA_STORAGE_POSTGRES_PASSWORD }}"
+        POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
+        POSTGRES_USER: "{{ .AUTHELIA_STORAGE_POSTGRES_USERNAME }}"
   dataFrom:
     - extract:
         key: authelia
