--- a/kubernetes/apps/security/authelia/app/patches/env.yaml
+++ b/kubernetes/apps/security/authelia/app/patches/env.yaml
@@ -51,7 +51,7 @@ spec:
       AUTHELIA_SERVER_PORT: 80
 
       AUTHELIA_SESSION_DOMAIN: "${SECRET_DOMAIN}"
-      AUTHELIA_SESSION_REDIS_HOST: redis-haproxy-haproxy.security.svc.cluster.local
+      AUTHELIA_SESSION_REDIS_HOST: redis.databases.svc.cluster.local
       AUTHELIA_SESSION_REDIS_PORT: 6379
 
       AUTHELIA_STORAGE_POSTGRES_DATABASE: authelia
@@ -60,6 +60,6 @@ spec:
       AUTHELIA_TELEMETRY_METRICS_ADDRESS: "tcp://0.0.0.0:8080"
       AUTHELIA_TELEMETRY_METRICS_ENABLED: "true"
 
-      AUTHELIA_THEME: grey
+      AUTHELIA_THEME: dark
       AUTHELIA_TOTP_ISSUER: authelia.com
       AUTHELIA_WEBAUTHN_DISABLE: "false"
