--- a/kubernetes/apps/organizers/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/organizers/sonarr/app/helmrelease.yaml
@@ -73,7 +73,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: "external"
+        className: "internal"
         annotations:
           external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
         hosts:
