--- a/kubernetes/apps/security/authelia/app/helmrelease.yaml
+++ b/kubernetes/apps/security/authelia/app/helmrelease.yaml
@@ -32,12 +32,12 @@ spec:
           - name: POSTGRES_USER
             valueFrom:
               secretKeyRef:
-                name: authelia
+                name: authelia-secret
                 key: AUTHELIA_STORAGE_POSTGRES_USERNAME
           - name: POSTGRES_PASS
             valueFrom:
               secretKeyRef:
-                name: authelia
+                name: authelia-secret
                 key: AUTHELIA_STORAGE_POSTGRES_PASSWORD
 
     controller:
